--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Pompsky Pump</title>
+		<title>Pomsky Pump</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Pomsky Pump</h2>
 							<p>Autonomous yield and liquidity generation protocol. Simply hold PomP to get more PomP.</p>
-							<button><a href="https://www.google.co.uk" target="_blank">BUY ON PANCAKESWAP</a></button>
+							<button><a href="https://www.google.com" target="_blank">BUY ON PANCAKESWAP</a></button>
 							<button><a href="https://www.google.co.uk" target="_blank">PooCoin Chart</a></button>
 							<button><a href="https://www.google.co.uk" target="_blank">Contract</a></button>
 							<button><a href="https://www.google.co.uk" target="_blank">Telegram</a></button>
