--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="https://www.google.co.uk" target="_blank">Chart</a></li>
-								<li><a href="https://www.google.co.uk" target="_blank">PancakeSwap</a></li>
-								<li><a href="https://www.google.co.uk" target="_blank">Contract</a></li>
+								<li><a href="https://poocoin.app/tokens/0xdd5afbedcdd51495b8932eebea14cc1a558527f4" target="_blank">Chart</a></li>
+								<li><a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xdd5afbedcdd51495b8932eebea14cc1a558527f4" target="_blank">PancakeSwap</a></li>
+								<li><a href="https://bscscan.com/token/0xdd5afbedcdd51495b8932eebea14cc1a558527f4" target="_blank">Contract</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -40,11 +40,11 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Pomsky Pump</h2>
 							<p>Autonomous yield and liquidity generation protocol. Simply hold PomP to get more PomP.</p>
-							<button><a href="https://www.google.com" target="_blank">BUY ON PANCAKESWAP</a></button>
-							<button><a href="https://www.google.co.uk" target="_blank">PooCoin Chart</a></button>
-							<button><a href="https://www.google.co.uk" target="_blank">Contract</a></button>
-							<button><a href="https://www.google.co.uk" target="_blank">Telegram</a></button>
-							<button><a href="https://www.google.co.uk" target="_blank">Twitter</a></button>
+							<button><a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xdd5afbedcdd51495b8932eebea14cc1a558527f4" target="_blank">BUY ON PANCAKESWAP</a></button>
+							<button><a href="https://poocoin.app/tokens/0xdd5afbedcdd51495b8932eebea14cc1a558527f4" target="_blank">PooCoin Chart</a></button>
+							<button><a href="https://bscscan.com/token/0xdd5afbedcdd51495b8932eebea14cc1a558527f4" target="_blank">Contract</a></button>
+							<button><a href="https://www.t.me/pomskypump" target="_blank">Telegram</a></button>
+							<button><a href="https://www.twitter.com/pomskypump" target="_blank">Twitter</a></button>
 						</div>
 					</section>
 
