--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pomp.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Holders earn passive rewards through static reflection as they watch their balance grow indefinitely. Reflect rewards set at 5%</h2>
-										<p>Holders earn passive rewards through static reflection as they watch their balance grow indefinitely. Reflect rewards set at 5%</p>
+										<h2 class="major">Automatic LP Burn</h2>
+										<p><p>Every trade contributes toward automatically generating liquidity locked inside PancakeSwap LP. This provides the token with an ever increasing price floor. LP fee is set at 3%</p></p>
 									</div>
 								</div>
 							</section>
